--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,8 +31,17 @@ jobs:
         echo "Hello world.......!"
         pwd
         env
-        
+    - name: setup python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'     
+    - name: install python packages
+      run: |
+        python -m pip install --upgrade pip
 
+    - name: Run script
+      run: python app.py 
+        
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     #- name: Setup Terraform
     #  uses: hashicorp/setup-terraform@v1
