--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,10 +1,10 @@
 name: 'Terraform'
 
 on:
-  workflow_dispatch:
-  #push:
-  #  branches: [ "staging" ]
-  #pull_request:
+  #workflow_dispatch:
+  push:
+    branches: [ "staging", "main" ]
+  pull_request:
 
 #permissions:
 #  contents: read
